--- a/HelloAndroid/app/src/main/res/layout/activity_main.xml
+++ b/HelloAndroid/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,10 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="154dp"
+        android:layout_marginTop="341dp"
         android:text="XinChao"
-        tools:layout_editor_absoluteX="154dp"
-        tools:layout_editor_absoluteY="341dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
